--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "devDependencies": {
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.3"
+    "node-sass": "^9.0.0",
+    "nuxt": "^3.7.3",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "vue-style-loader": "^4.1.3"
   },
   "dependencies": {
     "@enso-ui/accessories": "^4.0.10",
@@ -38,6 +42,7 @@
     "@enso-ui/uploader": "^2.0.17",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@nuxt/webpack-builder": "^3.7.3",
     "@pinia/nuxt": "^0.4.11",
     "@sentry/browser": "^7.70.0",
     "@sentry/integrations": "^7.70.0",
